# mdk-mining-controller

./: .gitignore  LICENSE  README.md  main.py  mdk  pyproject.toml  requirements.txt  run_dashboard.sh
data/models/: lstm_ae.pt  lstm_ae.pt.metadata.json  xgboost_failure.joblib  xgboost_failure.joblib.metadata.json
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  CRITICAL_POINTS.md  PROJECT_PLAN.md  PROPOSAL.md  REMAINING_FIXES.md  SUBMISSION.md  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  TECHNICAL_REPORT_BRIEF.md
docs/superpowers/plans/: 2026-04-17-cli-dashboard-four-flaws.md
notebooks/: 01_eda.executed.ipynb  01_eda.ipynb  02_results.executed.ipynb  02_results.ipynb
scripts/: consistency_check.py  export_report_docx.py  lstm_experiment_harness.py  test_cli_dashboard_flaws.py  test_live_feature_parity.py  test_te_formula.py  train_lstm_only.py  validate_seed.py
src/: __init__.py  config.py  run_pipeline.py  validate.py
src/cli/: __init__.py  __main__.py  ai_bridge.py  app.py  simulation.py
src/kpi/: __init__.py  true_efficiency.py
src/models/: __init__.py  evaluation.py  lstm_autoencoder.py  metadata.py  xgboost_classifier.py
src/optimizer/: __init__.py  rules.py  safety.py
src/pipeline/: __init__.py  features.py  ingestion.py  preprocessing.py
src/storage/: __init__.py  backend.py
src/synthetic/: __init__.py  failures.py  generator.py  metadata.py  physics.py  scenarios.py
